# Job-Scrraper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  EXPLORATION_ROADMAP.md  Makefile  README.md  SCRAPER_ARCHITECTURE.md  Validations.py  alembic.ini  build_embeddings.py  docker-compose.yml  extract_work_profiles.py  jobradar.html  pyproject.toml  rag.html  render.yaml  score_jobs_openai.py  temp.py
.github/workflows/: ci.yml
frontend/: index.html
job_scraper_pkg/: __init__.py  __main__.py  base.py
job_scraper_pkg/core/: browser.py  db.py  helpers.py
job_scraper_pkg/scrapers/: __init__.py  amazon.py  citi.py  goldman.py  google.py  jpmorgan.py  mastercard.py  microsoft.py  visa.py
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: render-start.sh  seed_demo.py  smoke_llm.py
src/jobradar/: __init__.py  bootstrap.py  config.py  logging_config.py  main.py
src/jobradar/api/: deps.py
src/jobradar/api/routers/: admin.py  auth.py  cv.py  health.py  jobs.py  matches.py
src/jobradar/core/: security.py
src/jobradar/db/: base.py  models.py
src/jobradar/schemas/: auth.py  jobs.py  matches.py
src/jobradar/scrapers/: __init__.py  amazon.py  base.py  browser.py  cli.py  google.py  helpers.py  repository.py
src/jobradar/services/: cv_extract.py  embeddings.py  free_fallback.py  llm.py  matching.py  scoring.py
src/jobradar/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_auth.py  test_e2e.py  test_health.py
