[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobradar"
version = "0.1.0"
description = "JobRadar — multi-user job aggregation, semantic matching, and LLM fit-scoring platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thanmaye Majeti" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic[email]>=2.7",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pgvector>=0.3.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "selenium>=4.21",
    "openai>=1.30",
    "numpy>=1.26",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-requests",
]

[project.scripts]
jobradar-scrape = "jobradar.scrapers.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jobradar"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI uses function calls (Depends()) in defaults

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
